app/assets/stylesheets/goals.css.scss
// Place all the styles related to the Goals controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.table-header-standalone {
  margin-bottom: 0px;
  border-radius: 4px 4px 0px 0px;
  border-bottom: none;
}

.goal-action-icon {
  &:hover {
    background-color: transparent;
  }
}

.times-a-cell {
  width: 52px;
}

#times-a-field {
  vertical-align: middle;
}

#action-header {
  border-top-left-radius: 4px !important;
}

.action-cell {
  width: 100px;
  border-top-left-radius: 0 !important;
  border-bottom-left-radius: 0 !important;
}

.action-field {
  width: 94px;
}

.goal-quantity-cell {
  width: 100px;
}

.goal-quantity-field {
  width: 98px;
}

.unit-cell {
  width: 70px;
}

.unit-field {
  width: 68px;
}

.frequency-cell {
  width: 50px;
}

.frequency-field {
  width: 50px;
}

.frequency-unit-cell {
  width: 80px;
}

.frequency-unit-field {
  width: 80px;
  margin-bottom: 0;
}

.date-cell {
  width: 123px;
}

.status-cell {
  width: 58px;
}

#status-field {
  vertical-align: middle;
}

#actions-header {
  border-top-right-radius: 4px !important;
}

.actions-cell {
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.example {
  margin-top: -10px;
  color: gray;
}

#times-per_field {
  padding-top: 5px;
}

#times-per_example {
  padding-top: 5px;
  color: gray;
}

.goal {

  input {
    width: 75px !important;
  }

  select[id$='2i']{
    width: 125px !important;
  }

  select {
    width: 75px !important;
  }
}

#goal_frequency_unit {
  width: 100px;
}

.target {
  border: 2px;
  border-color: black;
  border-style: ridge;

}

.pass {
  background-color: red;
}
.fail {
  background-color: green;
}

form table input {
  width: 100px;
}

